// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block rendered with children should render children 1`] = `
<div
  className="Block "
>
  <span>
    Child
  </span>
</div>
`;

exports[`Block rendered with className should render with expected class attribute 1`] = `
<div
  className="Block Foo"
/>
`;

exports[`Block rendered with compClassName should render with expected class attribute 1`] = `
<div
  className=" "
/>
`;

exports[`Block rendered with compClassName should render with expected class attribute 2`] = `
<div
  className=" foo"
/>
`;

exports[`Block rendered with compClassName should render with expected class attribute 3`] = `
<div
  className="block foo"
/>
`;

exports[`Block rendered with compType should render with expected component 1`] = `
<address
  className="Block "
/>
`;

exports[`Block rendered with compType should render with expected component 2`] = `
<aside
  className="Block "
/>
`;

exports[`Block rendered with compType should render with expected component 3`] = `
<article
  className="Block "
/>
`;

exports[`Block rendered with compType should render with expected component 4`] = `
<div
  className="Block "
/>
`;

exports[`Block rendered with compType should render with expected component 5`] = `
<footer
  className="Block "
/>
`;

exports[`Block rendered with compType should render with expected component 6`] = `
<header
  className="Block "
/>
`;

exports[`Block rendered with compType should render with expected component 7`] = `
<main
  className="Block "
/>
`;

exports[`Block rendered with compType should render with expected component 8`] = `
<nav
  className="Block "
/>
`;

exports[`Block rendered with compType should render with expected component 9`] = `
<section
  className="Block "
/>
`;

exports[`Block rendered with compType should render with expected component 10`] = `
<div
  className="Block foo"
/>
`;

exports[`Block rendered with compType should render with expected component 11`] = `
<div
  className="block "
/>
`;

exports[`Block rendered with compType should render with expected component 12`] = `
<div
  className="block foo"
/>
`;

exports[`Block rendered with no props should use default props 1`] = `
<div
  className="Block "
/>
`;
